--- a/Lab1/Tracer/UnitTests/UnitTests.csproj
+++ b/Lab1/Tracer/UnitTests/UnitTests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LibDemonstration\LibDemonstration.csproj" />
+    <ProjectReference Include="..\LibDemonstration\Program.csproj" />
     <ProjectReference Include="..\Tracer\Tracer.csproj" />
   </ItemGroup>
 
